--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Radio Deep</title>
-    <!-- Favicon (обновлено) -->
-    <link rel="icon" href="Chat-GPT-Image-11-2025-00-10-34.png" type="image/png">
-    <link rel="apple-touch-icon" href="Chat-GPT-Image-11-2025-00-10-34.png">
+    <!-- Обновлённые пути к фавиконке -->
+    <link rel="icon" href="radio-deep.png" type="image/png">
+    <link rel="apple-touch-icon" href="radio-deep.png">
     <!-- Стили -->
     <link href="https://www.radiobells.com/script/style.css" type="text/css" rel="stylesheet">
     <style>
