--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -143,7 +142,28 @@
             ['https://myradio24.org/oldclub', 'DEEP HOUSE MIX RADIO', 'deephousemixradio'],
             ['https://luxury.radiotoolkit.com:8000/radio', 'LUXURY MUSIC', 'luxurymusic'],
             ['https://radiorecord.hostingradio.ru/deep96.aacp', 'Record Deep', 'recorddeep'],
-            ['https://radiorecord.hostingradio.ru/chil96.aacp', 'Record Chill-Out', 'recordchillout']
+            ['https://radiorecord.hostingradio.ru/chil96.aacp', 'Record Chill-Out', 'recordchillout'],
+            ['https://radiorecord.hostingradio.ru/rus96.aacp', 'Record Russian Mix', 'russianmix'],
+            ['https://deep.amgradio.ru/DeepFM?r_bells', 'DEEP FM Radio', 'deepfm'],
+            ['https://dfm-dfmdeep.hostingradio.ru/dfmdeep96.aacp', 'DFM Deep', 'dfmdeep'],
+            ['https://radiorecord.hostingradio.ru/trancehits96.aacp', 'Record Trance Hits', 'recordtrancehits'],
+            ['https://listen2.myradio24.com/8226', 'Enigmatic Station 1', 'enigmaticstation1'],
+            ['https://stream.radiogoose.ru/listen/deep/play', 'Радио Гусь Дипхаус', 'radiogoosedeephouse'],
+            ['https://radio.enigmatic.su:8005/radio', 'Enigmatic Station 3', 'enigmaticstation3'],
+            ['https://proxy.hypermatic.com/http://radio.nueuphoria.com:8000/live', 'Nu Euphoria Trance Radio', 'nueuphoria'],
+            ['https://proxy.hypermatic.com/http://radio.rudeep.ru:8000/stream', 'Russian Deep Radio', 'rudeep'],
+            ['https://radio.promodj.com/deep-192', 'PromoDJ Deep', 'promodjdeep'],
+            ['https://proxy.hypermatic.com/http://79.120.39.202:8000/deephouse', 'Radio Caprice Deep / Chill House', 'capricedeepchillhouse'],
+            ['https://pub0201.101.ru/stream/trust/mp3/128/19?', 'NRJ Trance', 'nrjtrance'],
+            ['https://deephousex.ru///live', 'M.Deep Radio', 'mdeep'],
+            ['https://stream.radiogoose.ru/listen/trance/play', 'Радио Гусь Транс', 'radiogoosetrance'],
+            ['https://stream.nightride.fm/nightride.mp3', 'Nightride FM', 'nightridefm'],
+            ['https://dfm-dancehall.hostingradio.ru/dancehall96.aacp', 'DFM Dancehall', 'dfmdancehall'],
+            ['https://proxy.hypermatic.com/http://cast.brg.ua/djfm_main_public_mp3_hq', 'DJ FM', 'djfm'],
+            ['https://radiorecord.hostingradio.ru/progr96.aacp', 'Record Progressive', 'recordprogressive'],
+            ['https://proxy.hypermatic.com/http://213.141.131.10:8000/detroittechno', 'Radio Caprice Detroit Techno / Tech House', 'capricedetroittechnotechhouse'],
+            ['https://radiorecord.hostingradio.ru/neurofunk96.aacp', 'Record Neurofunk', 'recordneurofunk'],
+            ['https://proxy.hypermatic.com/http://strm112.1.fm/dubstep_mobile_mp3', '1FM Dupstep Forward', '1fmdubstepforward']
         ];
     </script>
     <script type="text/javascript" src="https://www.radiobells.com/script/v2_1.js" charset="UTF-8"></script>
