Enhance index.html with SEO and favicon updates
Updated the title and added meta description for SEO. Included Google Search Console verification and favicon.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Radio Deep</title>
-    <!-- Добавлена фавиконка по указанной ссылке -->
+    <title>Radio Deep - Online Deep House & Trance Radio</title>
+    <meta name="description" content="Listen to the best Deep House, Trance, Chill-out and Electronic music stations online. Radio Deep offers high-quality streaming 24/7.">
+    <!-- Google Search Console Verification -->
+    <meta name="google-site-verification" content="lAh-C4bGYH52Q74NJ_jNE_QKLcA9BmojyYRryvXZA20" />
+    <!-- Favicon -->
     <link rel="icon" href="https://i.postimg.cc/Y0bFnKVB/favicon-120x120.png" type="image/png">
     <link href="https://www.radiobells.com/script/style.css" type="text/css" rel="stylesheet" />
     <style>
@@ -84,8 +87,8 @@
         /* Медиа-запросы для мобильных устройств (до 768px) */
         @media (max-width: 768px) {
             body {
-                overflow: hidden; /* Отключаем всю прокрутку */
-                height: 100vh; /* Фиксируем высоту */
+                overflow: hidden;
+                height: 100vh;
             }
             .container {
                 width: 100%;
@@ -93,8 +96,8 @@
                 padding-top: 42px;
                 margin: 0;
                 box-sizing: border-box;
-                height: 100vh; /* Занимаем всю высоту экрана */
-                overflow: hidden; /* Отключаем прокрутку внутри контейнера */
+                height: 100vh;
+                overflow: hidden;
             }
             .neon-title {
                 font-size: 2em;
