Add Yandex verification and SEO meta tags
Added Yandex verification and additional meta tags for SEO.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Radio Deep - Online Deep House & Trance Radio</title>
     <meta name="description" content="Listen to the best Deep House, Trance, Chill-out and Electronic music stations online. Radio Deep offers high-quality streaming 24/7.">
+    <!-- Яндекс.Вебмастер Verification -->
+    <meta name="yandex-verification" content="5abfd88c88fb25b8" />
+    <!-- Дополнительные мета-теги для Яндекса -->
+    <meta name="keywords" content="онлайн радио, deep house, trance, музыка, streaming, радиостанции, electronic music">
+    <meta name="robots" content="index, follow">
     <!-- Google Search Console Verification -->
     <meta name="google-site-verification" content="lAh-C4bGYH52Q74NJ_jNE_QKLcA9BmojyYRryvXZA20" />
     <!-- Favicon -->
